# Learning-Python

./: .gitignore  README.md  byte_of_python.py  python_interactive_programming_pt1.py  python_logging.py  python_oop.py  requirements.txt
00_modern_tooling/: readme.md
01_bucketlist_api/: manage.py  run.py  test_bucketlist.py
01_bucketlist_api/app/: __init__.py  models.py
03_functional_programming/: error_handling.py  pattern_matching.py
04_types/: 01_items.py  02_banking.py
05_advanced_concepts/: 03_logging.py
07_concurrency/: 01_threading_problem.py  02_multiprocessing.py
11_classic_algorithms/: LICENSE  pyproject.toml  readme.md  requirements_dev.txt
11_classic_algorithms/1_simple_problems/: compression.py  encription.py  fibonacci.py  hanoi.py  pi_estimation.py
11_classic_algorithms/1_simple_problems/tests/: test_simple_problems.py
advanced_python/: 01_decorators.py  01_intro_classes.py  02_callable_classes.py  04_function_decorators.py  async_programming.py  concurrency_problem.py  multithreading.py  read_data_api.py
byte_of_Python/: byte_of_python.py
clean_architecture/: Clean_Architecture.md
concurrency/: 02_multiprocessing.py  03_threading.py  04_threading_semaphore.py  05_async_count.py  06_async_rand.py
fluent_python/: chapter_2_array_sequences.py
oop_fundamentals/: 02_french_deck.py  05_deep_copies.py  method_decorators.py
property_testing/: README.md  pyproject.toml
schafer_tutorials/: python_oop.py  python_schafer_basics.py  shoplist.data  test.db  test_employee.py  unit_testing.py
type_hints/: 02_banking.py
(+114 files in other folders)
