[tool.poetry]
name = "classic_algorithms"
version = "0.1.0"
description = "Classic algorithms implemented in python"
authors = ["Bizovi <bizovim@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
mpmath = "^1.1.0"
tco = "^1.2.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
hypothesis = "^5.41.4"
micropipenv = "^1.0.1"
sympy = "^1.6.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
