[tool.poetry]
name = "property_testing"
version = "0.1.0"
description = "Exploring the property testing with hypothesis"
authors = ["Bizovi <bizovim@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
hypothesis = "^5.41.2"
micropipenv = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
